tests/dataset/tpc-ds/compiler/java/q53.error
javac error: exit status 1
/tmp/TestJavaCompiler_TPCDSQueriesq53430811329/001/Q53.java:190: error: cannot find symbol
        res5.add(x.price);
                  ^
  symbol:   variable price
  location: variable x of type SsI
/tmp/TestJavaCompiler_TPCDSQueriesq53430811329/001/Q53.java:196: error: cannot find symbol
        res6.add(x.price);
                  ^
  symbol:   variable price
  location: variable x of type SsI
/tmp/TestJavaCompiler_TPCDSQueriesq53430811329/001/Q53.java:212: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new IManufactIdSumSales(1, 20.000000), new IManufactIdSumSales(2, 53.000000))))) throw new AssertionError("expect failed");
                                                                          ^
/tmp/TestJavaCompiler_TPCDSQueriesq53430811329/001/Q53.java:212: error: incompatible types: possible lossy conversion from double to int
    if (!(Objects.equals(result, Arrays.asList(new IManufactIdSumSales(1, 20.000000), new IManufactIdSumSales(2, 53.000000))))) throw new AssertionError("expect failed");
                                                                                                                 ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
4 errors
